test/corpus/g_words.txt
================================================================================
Every G word
================================================================================

G0 G1 G2 G3 G4 G5 G5.1 G5.2 G5.3 G7 G8 G10 G17 G20 G21 G28 G28.1 G30 G30.1 G33
G33.1 G38.2 G38.3 G38.4 G38.5 G40 G41 G42 G41.1 G42.1 G43 G43.1 G43.2 G49 G52
G53 G54 G61 G61.1 G64 G73 G74 G76 G80 G81 G82 G83 G84 G85 G86 G87 G88 G89 G90
G91 G90.1 G91.1 G92 G92.1 G92.2 G92.3 G93 G94 G95 G96 G97 G98 G99

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g))
  (line
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g))
  (line
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g))
  (line
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)))
